# claude-zeroclaw

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.ts  create-skill.md  daily-standup.md  db.ts  docker-compose.yml  heartbeat.ts  index.ts  install.sh  llms.txt  logger.ts  package.json  plugin.json  post-tool-use.ts  runner.ts  server.ts  setup.ts  status.ts  system.md  telegram.ts  tsconfig.json  types.ts  zeroclaw-job.md  zeroclaw-start.md  zeroclaw-status.md
js/: package.json
js/src/: config-wizard.js  health.js  index.js  models.js  session-client.js  utils.js
js/tests/: health.test.js
mnt/user-data/outputs/zeroclaw-claude/src/scheduler/: index.ts
scripts/: build.js  setup.js
src/: config.rs  error.rs  index.js  main.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/models/: mod.rs
src/proxy/: cli.rs  mod.rs  session.rs  stream.rs
src/router/: chat.rs  health.rs  models.rs
tests/: integration_test.rs
