[package]
name        = "claude-zeroclaw"
version     = "0.1.0"
edition     = "2021"
authors     = ["claude-zeroclaw contributors"]
license     = "MIT"
description = "OpenAI-compatible gateway for your Claude subscription — Rust core + JS config layer"
repository  = "https://github.com/Crestdrasnips/claude-zeroclaw"
keywords    = ["claude", "openai", "gateway", "proxy", "anthropic"]

[[bin]]
name = "claude-zeroclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio         = { version = "1.40", features = ["full"] }

# HTTP server
axum          = { version = "0.7", features = ["json", "ws"] }
tower         = { version = "0.4", features = ["util"] }
tower-http    = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper         = { version = "1.4", features = ["full"] }

# HTTP client (outbound to Claude CLI)
reqwest       = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Serialization
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

# Streaming / SSE
futures       = "0.3"
tokio-stream  = "0.1"
async-stream  = "0.3"
bytes         = "1.7"

# Logging & tracing
tracing                    = "0.1"
tracing-subscriber         = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow        = "1.0"
thiserror     = "1.0"

# Config
dotenv        = "0.15"
config        = { version = "0.14", features = ["toml"] }

# Misc
uuid          = { version = "1.10", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
once_cell     = "1.19"

[dev-dependencies]
tokio-test    = "0.4"
axum-test     = "0.1"
